--- a/index.html
+++ b/index.html
@@ -10,31 +10,60 @@
 </head>
 
 <body>
-    <h1>DURGA PUJA COUNTDOWN</h1>
+    <div class="container">
+        <h1>DURGA PUJA COUNTDOWN </h1>
 
-    <div class="countdown">
+        <div class="countdown">
 
-        <div class="timer">
-            <h2 id="days"></h2>
+            <div class="timer">
+                <h2 id="days"></h2>
+                <span>DAYS</span>
+            </div>
+            <div class="timer">
+                <h2 id="hours"></h2>
+                <span>HOURS</span>
+            </div>
+            <div class="timer">
+                <h2 id="minutes"></h2>
+                <span>MINUTES</span>
+            </div>
+            <div class="timer">
+                <h2 id="seconds"></h2>
+                <span>SECONDS</span>
+            </div>
+        </div>
+
+
+    </div>
+
+<div class="container1">
+
+    <h1>KALI PUJA COUNTDOWN 2023</h1>
+
+    <div class="countdown1">
+
+        <div class="time">
+            <h2 id="day"></h2>
             <span>DAYS</span>
         </div>
-        <div class="timer">
-            <h2 id="hours"></h2>
+        <div class="time">
+            <h2 id="hour"></h2>
             <span>HOURS</span>
         </div>
-        <div class="timer">
-            <h2 id="minutes"></h2>
+        <div class="time">
+            <h2 id="minute"></h2>
             <span>MINUTES</span>
         </div>
-        <div class="timer">
-            <h2 id="seconds"></h2>
+        <div class="time">
+            <h2 id="second"></h2>
             <span>SECONDS</span>
         </div>
     </div>
+</div>
 
 
     <script src="countdown.js">
-        00
+
     </script>
 </body>
 
