--- a/index.html
+++ b/index.html
@@ -7,59 +7,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DURGA PUJA COUNT-DOWN</title>
     <link rel="stylesheet" href="countdown.css">
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 </head>
 
 <body>
-    <div class="container">
-        <h1>DURGA PUJA COUNTDOWN </h1>
+    <div class="main-container">
 
-        <div class="countdown">
+        <div class="container">
+            <h1>DURGA PUJA COUNTDOWN 2025</h1>
 
-            <div class="timer">
-                <h2 id="days"></h2>
-                <span>DAYS</span>
+            <div class="countdown">
+
+                <div class="timer">
+                    <h2 id="days"></h2>
+                    <span>DAYS</span>
+                </div>
+                <div class="timer">
+                    <h2 id="hours"></h2>
+                    <span>HOURS</span>
+                </div>
+                <div class="timer">
+                    <h2 id="minutes"></h2>
+                    <span>MINUTES</span>
+                </div>
+                <div class="timer">
+                    <h2 id="seconds"></h2>
+                    <span>SECONDS</span>
+                </div>
             </div>
-            <div class="timer">
-                <h2 id="hours"></h2>
-                <span>HOURS</span>
-            </div>
-            <div class="timer">
-                <h2 id="minutes"></h2>
-                <span>MINUTES</span>
-            </div>
-            <div class="timer">
-                <h2 id="seconds"></h2>
-                <span>SECONDS</span>
+
+
+        </div>
+        <div class="container1">
+
+            <h1>KALI PUJA COUNTDOWN 2024</h1>
+
+            <div class="countdown1">
+
+                <div class="time">
+                    <h2 id="day"></h2>
+                    <span>DAYS</span>
+                </div>
+                <div class="time">
+                    <h2 id="hour"></h2>
+                    <span>HOURS</span>
+                </div>
+                <div class="time">
+                    <h2 id="minute"></h2>
+                    <span>MINUTES</span>
+                </div>
+                <div class="time">
+                    <h2 id="second"></h2>
+                    <span>SECONDS</span>
+                </div>
             </div>
         </div>
-
-
     </div>
 
-<div class="container1">
-
-    <h1>KALI PUJA COUNTDOWN 2023</h1>
-
-    <div class="countdown1">
-
-        <div class="time">
-            <h2 id="day"></h2>
-            <span>DAYS</span>
-        </div>
-        <div class="time">
-            <h2 id="hour"></h2>
-            <span>HOURS</span>
-        </div>
-        <div class="time">
-            <h2 id="minute"></h2>
-            <span>MINUTES</span>
-        </div>
-        <div class="time">
-            <h2 id="second"></h2>
-            <span>SECONDS</span>
-        </div>
-    </div>
-</div>
 
 
     <script src="countdown.js">
